[tool.poetry]
name = "python-graph-experiments"
version = "0.1.0"
description = "Just messin around w graphs lol"
authors = ["jey <limule@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
